feat: translate unknown devices page to PT-BR
- Add comprehensive translations for unknown devices page
- Translate all UI elements including:
  - Page title and statistics cards
  - Filter section with search, protocol, port, status, and time period filters
  - Table headers and content
  - Action buttons and tooltips
  - Dialog boxes for viewing, linking, and creating devices
  - Form fields and validation messages
  - Time formatting (days/hours/minutes ago)
- Fix Grid component issues by replacing with CSS Grid layout
- Remove unused imports to clean up code
- Maintain responsive design across all screen sizes
- Support for both English and Portuguese (PT-BR) languages

Components translated:
- Unknown devices list and statistics
- Advanced filtering system
- Device details dialog
- Link device dialog
- Create device from unknown dialog
- Confirmation dialogs
- All form fields and validation messages

--- a/traccar-react-frontend/src/i18n/locales/en.json
+++ b/traccar-react-frontend/src/i18n/locales/en.json
@@ -154,5 +154,74 @@
     "lastUpdate": "Last Update",
     "filterMap": "Filter Map",
     "addDevice": "Add Device"
+  },
+  "unknownDevices": {
+    "title": "Unknown Devices",
+    "totalUnknownDevices": "Total Unknown Devices",
+    "unregistered": "Unregistered",
+    "registered": "Registered",
+    "protocols": "Protocols",
+    "filters": "Filters",
+    "clear": "Clear",
+    "filterUnknownDevices": "Filter Unknown Devices",
+    "searchDevices": "Search devices",
+    "searchPlaceholder": "Search by unique ID, protocol, or IP...",
+    "protocol": "Protocol",
+    "allProtocols": "All Protocols",
+    "port": "Port",
+    "allPorts": "All Ports",
+    "status": "Status",
+    "allStatus": "All Status",
+    "timePeriod": "Time Period",
+    "lastHour": "Last Hour",
+    "last24Hours": "Last 24 Hours",
+    "lastWeek": "Last Week",
+    "lastMonth": "Last Month",
+    "deviceId": "Device ID",
+    "clientAddress": "Client Address",
+    "connections": "Connections",
+    "lastSeen": "Last Seen",
+    "actions": "Actions",
+    "firstSeen": "First seen:",
+    "viewDetails": "View Details",
+    "createDevice": "Create Device",
+    "linkToDevice": "Link to Device",
+    "delete": "Delete",
+    "noDevicesFound": "No unknown devices found. Devices will appear here when they connect to protocol ports but are not registered in the system.",
+    "noDevicesMatchFilters": "No unknown devices match the current filters. Try adjusting your search criteria.",
+    "clearFilters": "Clear Filters",
+    "unknownDeviceDetails": "Unknown Device Details",
+    "connectionCount": "Connection Count",
+    "rawData": "Raw Data",
+    "close": "Close",
+    "linkUnknownDevice": "Link Unknown Device to Registered Device",
+    "linkUnknownDeviceDescription": "Link unknown device to a registered device:",
+    "selectDevice": "Select Device",
+    "noDevicesAvailable": "No devices available",
+    "cancel": "Cancel",
+    "linkDevice": "Link Device",
+    "createDeviceFromUnknown": "Create Device from Unknown Device",
+    "createDeviceDescription": "Create a new device from unknown device:",
+    "deviceName": "Device Name",
+    "model": "Model",
+    "contact": "Contact",
+    "category": "Category",
+    "phone": "Phone",
+    "licensePlate": "License Plate",
+    "car": "Car",
+    "truck": "Truck",
+    "motorcycle": "Motorcycle",
+    "van": "Van",
+    "bus": "Bus",
+    "boat": "Boat",
+    "iphone": "iPhone",
+    "android": "Android",
+    "other": "Other",
+    "createDevice": "Create Device",
+    "deleteUnknownDevice": "Delete Unknown Device",
+    "deleteConfirmation": "Are you sure you want to delete the unknown device? This action cannot be undone.",
+    "daysAgo": "day(s) ago",
+    "hoursAgo": "hour(s) ago",
+    "minutesAgo": "minute(s) ago"
   }
 }
