--- a/traccar-react-frontend/src/i18n/locales/pt.json
+++ b/traccar-react-frontend/src/i18n/locales/pt.json
@@ -154,5 +154,74 @@
     "lastUpdate": "Última Atualização",
     "filterMap": "Filtrar Mapa",
     "addDevice": "Adicionar Dispositivo"
+  },
+  "unknownDevices": {
+    "title": "Dispositivos Desconhecidos",
+    "totalUnknownDevices": "Total de Dispositivos Desconhecidos",
+    "unregistered": "Não Registrado",
+    "registered": "Registrado",
+    "protocols": "Protocolos",
+    "filters": "Filtros",
+    "clear": "Limpar",
+    "filterUnknownDevices": "Filtrar Dispositivos Desconhecidos",
+    "searchDevices": "Pesquisar dispositivos",
+    "searchPlaceholder": "Pesquisar por ID único, protocolo ou IP...",
+    "protocol": "Protocolo",
+    "allProtocols": "Todos os Protocolos",
+    "port": "Porta",
+    "allPorts": "Todas as Portas",
+    "status": "Status",
+    "allStatus": "Todos os Status",
+    "timePeriod": "Período",
+    "lastHour": "Última Hora",
+    "last24Hours": "Últimas 24 Horas",
+    "lastWeek": "Última Semana",
+    "lastMonth": "Último Mês",
+    "deviceId": "ID do Dispositivo",
+    "clientAddress": "Endereço do Cliente",
+    "connections": "Conexões",
+    "lastSeen": "Última Visualização",
+    "actions": "Ações",
+    "firstSeen": "Primeira visualização:",
+    "viewDetails": "Ver Detalhes",
+    "createDevice": "Criar Dispositivo",
+    "linkToDevice": "Vincular ao Dispositivo",
+    "delete": "Excluir",
+    "noDevicesFound": "Nenhum dispositivo desconhecido encontrado. Os dispositivos aparecerão aqui quando se conectarem às portas de protocolo, mas não estiverem registrados no sistema.",
+    "noDevicesMatchFilters": "Nenhum dispositivo desconhecido corresponde aos filtros atuais. Tente ajustar seus critérios de pesquisa.",
+    "clearFilters": "Limpar Filtros",
+    "unknownDeviceDetails": "Detalhes do Dispositivo Desconhecido",
+    "connectionCount": "Contagem de Conexões",
+    "rawData": "Dados Brutos",
+    "close": "Fechar",
+    "linkUnknownDevice": "Vincular Dispositivo Desconhecido ao Dispositivo Registrado",
+    "linkUnknownDeviceDescription": "Vincular dispositivo desconhecido a um dispositivo registrado:",
+    "selectDevice": "Selecionar Dispositivo",
+    "noDevicesAvailable": "Nenhum dispositivo disponível",
+    "cancel": "Cancelar",
+    "linkDevice": "Vincular Dispositivo",
+    "createDeviceFromUnknown": "Criar Dispositivo a partir de Dispositivo Desconhecido",
+    "createDeviceDescription": "Criar um novo dispositivo a partir do dispositivo desconhecido:",
+    "deviceName": "Nome do Dispositivo",
+    "model": "Modelo",
+    "contact": "Contato",
+    "category": "Categoria",
+    "phone": "Telefone",
+    "licensePlate": "Placa do Veículo",
+    "car": "Carro",
+    "truck": "Caminhão",
+    "motorcycle": "Moto",
+    "van": "Van",
+    "bus": "Ônibus",
+    "boat": "Barco",
+    "iphone": "iPhone",
+    "android": "Android",
+    "other": "Outro",
+    "createDevice": "Criar Dispositivo",
+    "deleteUnknownDevice": "Excluir Dispositivo Desconhecido",
+    "deleteConfirmation": "Tem certeza de que deseja excluir o dispositivo desconhecido? Esta ação não pode ser desfeita.",
+    "daysAgo": "dia(s) atrás",
+    "hoursAgo": "hora(s) atrás",
+    "minutesAgo": "minuto(s) atrás"
   }
 }
