feat: translate groups page to PT-BR
- Add comprehensive translations for groups management page
- Translate all UI elements including:
  - Page title and header actions
  - Filter section with search, status, and person filters
  - Table headers and content
  - Action buttons and tooltips
  - Status indicators (enabled/disabled)
  - Confirmation dialogs for delete, enable, disable actions
  - Empty state messages and descriptions
- Support hierarchical group display with proper indentation
- Maintain responsive design across all screen sizes
- Support for both English and Portuguese (PT-BR) languages

Components translated:
- Groups list and management interface
- Advanced filtering system (search, status, person)
- Group hierarchy display with parent-child relationships
- Action buttons (edit, enable/disable, delete)
- Confirmation dialogs for all destructive actions
- Empty state messages and help text
- All form labels and validation messages

Features:
- Hierarchical group organization
- Status management (enabled/disabled)
- Person assignment tracking
- Device and children count display
- Advanced search and filtering
- Responsive table layout

--- a/traccar-react-frontend/src/i18n/locales/en.json
+++ b/traccar-react-frontend/src/i18n/locales/en.json
@@ -223,5 +223,45 @@
     "daysAgo": "day(s) ago",
     "hoursAgo": "hour(s) ago",
     "minutesAgo": "minute(s) ago"
+  },
+  "groups": {
+    "title": "Groups",
+    "filters": "Filters",
+    "clear": "Clear",
+    "addGroup": "Add Group",
+    "filterGroups": "Filter Groups",
+    "searchGroups": "Search groups",
+    "searchPlaceholder": "Search by name, description, or person...",
+    "status": "Status",
+    "allStatus": "All Status",
+    "enabled": "Enabled",
+    "disabled": "Disabled",
+    "person": "Person",
+    "allPersons": "All Persons",
+    "name": "Name",
+    "description": "Description",
+    "parent": "Parent",
+    "devices": "Devices",
+    "children": "Children",
+    "created": "Created",
+    "actions": "Actions",
+    "rootGroup": "Root Group",
+    "noPerson": "No Person",
+    "editGroup": "Edit Group",
+    "enableGroup": "Enable Group",
+    "disableGroup": "Disable Group",
+    "deleteGroup": "Delete Group",
+    "noGroupsFound": "No groups found",
+    "noGroupsMatchFilters": "No groups match the current filters",
+    "noGroupsDescription": "Click \"Add Group\" to create your first group.",
+    "noGroupsMatchDescription": "Try adjusting your search criteria or clear the filters.",
+    "clearFilters": "Clear Filters",
+    "deleteGroupTitle": "Delete Group",
+    "disableGroupTitle": "Disable Group",
+    "enableGroupTitle": "Enable Group",
+    "confirmAction": "Confirm Action",
+    "deleteGroupMessage": "Are you sure you want to delete the group? This action cannot be undone.",
+    "disableGroupMessage": "Are you sure you want to disable the group?",
+    "enableGroupMessage": "Are you sure you want to enable the group?"
   }
 }
