--- a/traccar-react-frontend/src/i18n/locales/pt.json
+++ b/traccar-react-frontend/src/i18n/locales/pt.json
@@ -223,5 +223,45 @@
     "daysAgo": "dia(s) atrás",
     "hoursAgo": "hora(s) atrás",
     "minutesAgo": "minuto(s) atrás"
+  },
+  "groups": {
+    "title": "Grupos",
+    "filters": "Filtros",
+    "clear": "Limpar",
+    "addGroup": "Adicionar Grupo",
+    "filterGroups": "Filtrar Grupos",
+    "searchGroups": "Pesquisar grupos",
+    "searchPlaceholder": "Pesquisar por nome, descrição ou pessoa...",
+    "status": "Status",
+    "allStatus": "Todos os Status",
+    "enabled": "Habilitado",
+    "disabled": "Desabilitado",
+    "person": "Pessoa",
+    "allPersons": "Todas as Pessoas",
+    "name": "Nome",
+    "description": "Descrição",
+    "parent": "Pai",
+    "devices": "Dispositivos",
+    "children": "Filhos",
+    "created": "Criado",
+    "actions": "Ações",
+    "rootGroup": "Grupo Raiz",
+    "noPerson": "Sem Pessoa",
+    "editGroup": "Editar Grupo",
+    "enableGroup": "Habilitar Grupo",
+    "disableGroup": "Desabilitar Grupo",
+    "deleteGroup": "Excluir Grupo",
+    "noGroupsFound": "Nenhum grupo encontrado",
+    "noGroupsMatchFilters": "Nenhum grupo corresponde aos filtros atuais",
+    "noGroupsDescription": "Clique em \"Adicionar Grupo\" para criar seu primeiro grupo.",
+    "noGroupsMatchDescription": "Tente ajustar seus critérios de pesquisa ou limpe os filtros.",
+    "clearFilters": "Limpar Filtros",
+    "deleteGroupTitle": "Excluir Grupo",
+    "disableGroupTitle": "Desabilitar Grupo",
+    "enableGroupTitle": "Habilitar Grupo",
+    "confirmAction": "Confirmar Ação",
+    "deleteGroupMessage": "Tem certeza de que deseja excluir o grupo? Esta ação não pode ser desfeita.",
+    "disableGroupMessage": "Tem certeza de que deseja desabilitar o grupo?",
+    "enableGroupMessage": "Tem certeza de que deseja habilitar o grupo?"
   }
 }
