feat: translate persons page to PT-BR
- Add comprehensive translations for persons management page
- Translate all UI elements including:
  - Page title and header actions
  - Filter section with search, type, status, and location filters
  - Table headers and content
  - Action buttons and tooltips
  - Status indicators (active/inactive)
  - Person type indicators (physical/legal)
  - Confirmation dialogs for delete, activate, deactivate actions
  - Empty state messages and descriptions
- Support for both physical and legal person types
- Maintain responsive design across all screen sizes
- Support for both English and Portuguese (PT-BR) languages

Components translated:
- Persons list and management interface
- Advanced filtering system (search, type, status, location)
- Person type display (physical/legal with icons)
- Document formatting (CPF/CNPJ)
- Action buttons (edit, activate/deactivate, delete)
- Confirmation dialogs for all destructive actions
- Empty state messages and help text
- All form labels and validation messages

Features:
- Person type management (physical/legal)
- Status management (active/inactive)
- Location-based filtering
- Document number formatting
- Advanced search and filtering
- Responsive table layout
- Group count display

--- a/traccar-react-frontend/src/i18n/locales/en.json
+++ b/traccar-react-frontend/src/i18n/locales/en.json
@@ -263,5 +263,49 @@
     "deleteGroupMessage": "Are you sure you want to delete the group? This action cannot be undone.",
     "disableGroupMessage": "Are you sure you want to disable the group?",
     "enableGroupMessage": "Are you sure you want to enable the group?"
+  },
+  "persons": {
+    "title": "Persons",
+    "filters": "Filters",
+    "clear": "Clear",
+    "addPerson": "Add Person",
+    "filterPersons": "Filter Persons",
+    "searchPersons": "Search persons",
+    "searchPlaceholder": "Search by name, email, phone, document...",
+    "type": "Type",
+    "allTypes": "All Types",
+    "physical": "Physical",
+    "legal": "Legal",
+    "status": "Status",
+    "allStatus": "All Status",
+    "active": "Active",
+    "inactive": "Inactive",
+    "location": "Location",
+    "allLocations": "All Locations",
+    "name": "Name",
+    "document": "Document",
+    "email": "Email",
+    "phone": "Phone",
+    "groups": "Groups",
+    "actions": "Actions",
+    "editPerson": "Edit Person",
+    "deactivate": "Deactivate",
+    "activate": "Activate",
+    "deletePerson": "Delete Person",
+    "noPersonsFound": "No persons found",
+    "noPersonsMatchFilters": "No persons match the current filters",
+    "noPersonsDescription": "Click \"Add Person\" to create your first person record.",
+    "noPersonsMatchDescription": "Try adjusting your search criteria or clear the filters.",
+    "clearFilters": "Clear Filters",
+    "deletePersonTitle": "Delete Person",
+    "deactivatePersonTitle": "Deactivate Person",
+    "activatePersonTitle": "Activate Person",
+    "deletePersonMessage": "Are you sure you want to delete? This action cannot be undone.",
+    "deactivatePersonMessage": "Are you sure you want to deactivate?",
+    "activatePersonMessage": "Are you sure you want to activate?",
+    "addPersonTitle": "Add Person",
+    "editPersonTitle": "Edit Person",
+    "delete": "Delete",
+    "confirm": "Confirm"
   }
 }
