--- a/traccar-react-frontend/src/i18n/locales/pt.json
+++ b/traccar-react-frontend/src/i18n/locales/pt.json
@@ -263,5 +263,49 @@
     "deleteGroupMessage": "Tem certeza de que deseja excluir o grupo? Esta ação não pode ser desfeita.",
     "disableGroupMessage": "Tem certeza de que deseja desabilitar o grupo?",
     "enableGroupMessage": "Tem certeza de que deseja habilitar o grupo?"
+  },
+  "persons": {
+    "title": "Pessoas",
+    "filters": "Filtros",
+    "clear": "Limpar",
+    "addPerson": "Adicionar Pessoa",
+    "filterPersons": "Filtrar Pessoas",
+    "searchPersons": "Pesquisar pessoas",
+    "searchPlaceholder": "Pesquisar por nome, email, telefone, documento...",
+    "type": "Tipo",
+    "allTypes": "Todos os Tipos",
+    "physical": "Física",
+    "legal": "Jurídica",
+    "status": "Status",
+    "allStatus": "Todos os Status",
+    "active": "Ativo",
+    "inactive": "Inativo",
+    "location": "Localização",
+    "allLocations": "Todas as Localizações",
+    "name": "Nome",
+    "document": "Documento",
+    "email": "Email",
+    "phone": "Telefone",
+    "groups": "Grupos",
+    "actions": "Ações",
+    "editPerson": "Editar Pessoa",
+    "deactivate": "Desativar",
+    "activate": "Ativar",
+    "deletePerson": "Excluir Pessoa",
+    "noPersonsFound": "Nenhuma pessoa encontrada",
+    "noPersonsMatchFilters": "Nenhuma pessoa corresponde aos filtros atuais",
+    "noPersonsDescription": "Clique em \"Adicionar Pessoa\" para criar seu primeiro registro de pessoa.",
+    "noPersonsMatchDescription": "Tente ajustar seus critérios de pesquisa ou limpe os filtros.",
+    "clearFilters": "Limpar Filtros",
+    "deletePersonTitle": "Excluir Pessoa",
+    "deactivatePersonTitle": "Desativar Pessoa",
+    "activatePersonTitle": "Ativar Pessoa",
+    "deletePersonMessage": "Tem certeza de que deseja excluir? Esta ação não pode ser desfeita.",
+    "deactivatePersonMessage": "Tem certeza de que deseja desativar?",
+    "activatePersonMessage": "Tem certeza de que deseja ativar?",
+    "addPersonTitle": "Adicionar Pessoa",
+    "editPersonTitle": "Editar Pessoa",
+    "delete": "Excluir",
+    "confirm": "Confirmar"
   }
 }
