feat: translate commands and users pages to PT-BR
- Add comprehensive translations for commands management page
- Add comprehensive translations for users management page
- Translate all UI elements including:
  - Page titles and header actions
  - Filter sections with search, status, priority, device filters
  - Table headers and content
  - Action buttons and tooltips
  - Status indicators (pending, sent, delivered, failed, cancelled)
  - Priority indicators (urgent, high, normal, low)
  - Statistics cards and summaries
  - Confirmation dialogs for all actions
  - Empty state messages and descriptions
  - Form labels and validation messages
- Support for both English and Portuguese (PT-BR) languages

Commands page features:
- Command status management (pending, sent, delivered, failed, cancelled)
- Priority management (urgent, high, normal, low)
- Device-based filtering
- Bulk command sending
- Command resending and cancellation
- Advanced search and filtering
- Real-time status updates

Users page features:
- User management (create, edit, delete, activate/deactivate)
- Role management (admin, user)
- Permission management (devices, groups, managed users)
- User statistics and summaries
- Advanced filtering by status and role
- Comprehensive permission dialogs
- Access control and security

Components translated:
- Commands list and management interface
- Users list and management interface
- Advanced filtering systems
- Action buttons and tooltips
- Confirmation dialogs
- Form dialogs and validation
- Statistics cards and summaries
- Empty state messages
- All form labels and helper text

--- a/traccar-react-frontend/src/i18n/locales/en.json
+++ b/traccar-react-frontend/src/i18n/locales/en.json
@@ -307,5 +307,106 @@
     "editPersonTitle": "Edit Person",
     "delete": "Delete",
     "confirm": "Confirm"
+  },
+  "commands": {
+    "title": "Commands",
+    "filters": "Filters",
+    "clear": "Clear",
+    "refresh": "Refresh",
+    "sendCommand": "Send Command",
+    "bulkSend": "Bulk Send",
+    "filterCommands": "Filter Commands",
+    "searchCommands": "Search commands",
+    "searchPlaceholder": "Search by command type, device, or result...",
+    "status": "Status",
+    "allStatus": "All Status",
+    "pending": "Pending",
+    "sent": "Sent",
+    "delivered": "Delivered",
+    "failed": "Failed",
+    "cancelled": "Cancelled",
+    "priority": "Priority",
+    "allPriorities": "All Priorities",
+    "urgent": "Urgent",
+    "high": "High",
+    "normal": "Normal",
+    "low": "Low",
+    "device": "Device",
+    "allDevices": "All Devices",
+    "commandType": "Command Type",
+    "created": "Created",
+    "result": "Result",
+    "actions": "Actions",
+    "totalCommands": "Total Commands",
+    "resendCommand": "Resend Command",
+    "viewDetails": "View Details",
+    "cancelCommand": "Cancel Command",
+    "noCommandsFound": "No commands found. Click \"Send Command\" to get started.",
+    "noCommandsMatchFilters": "No commands match the current filters. Try adjusting your search criteria.",
+    "clearFilters": "Clear Filters",
+    "commandSentSuccess": "Command sent successfully!",
+    "commandsSentSuccess": "commands sent successfully!",
+    "commandsSentPartial": "commands sent, failed",
+    "commandsRefreshed": "Commands refreshed"
+  },
+  "users": {
+    "title": "User Management",
+    "addUser": "Add User",
+    "searchUsers": "Search users",
+    "searchPlaceholder": "Search by name or email...",
+    "status": "Status",
+    "all": "All",
+    "active": "Active",
+    "inactive": "Inactive",
+    "role": "Role",
+    "administrator": "Administrator",
+    "user": "User",
+    "name": "Name",
+    "email": "Email",
+    "deviceLimit": "Device Limit",
+    "created": "Created",
+    "actions": "Actions",
+    "totalUsers": "Total Users",
+    "activeUsers": "Active Users",
+    "administrators": "Administrators",
+    "inactiveUsers": "Inactive Users",
+    "moreActions": "More actions",
+    "editUser": "Edit User",
+    "viewPermissions": "View Permissions",
+    "deleteUser": "Delete User",
+    "accessDenied": "Access denied. Admin privileges required to manage users.",
+    "createNewUser": "Create New User",
+    "editUserTitle": "Edit User",
+    "phone": "Phone",
+    "password": "Password",
+    "deviceLimitHelper": "-1 for unlimited",
+    "userLimit": "User Limit",
+    "userLimitHelper": "0 for no management rights",
+    "administrator": "Administrator",
+    "cancel": "Cancel",
+    "createUser": "Create User",
+    "creating": "Creating...",
+    "updateUser": "Update User",
+    "updating": "Updating...",
+    "passwordHelper": "Leave blank to keep current password",
+    "userPermissions": "User Permissions",
+    "devicePermissions": "Device Permissions",
+    "groupPermissions": "Group Permissions",
+    "managedUsers": "Managed Users",
+    "selectDevices": "Select Devices",
+    "selectGroups": "Select Groups",
+    "selectManagedUsers": "Select Managed Users",
+    "currentPermissionsSummary": "Current Permissions Summary",
+    "devicesSelected": "device(s) selected",
+    "noDevicesSelected": "No devices selected",
+    "groupsSelected": "group(s) selected",
+    "noGroupsSelected": "No groups selected",
+    "usersManaged": "user(s) managed",
+    "noUsersManaged": "No users managed",
+    "savePermissions": "Save Permissions",
+    "saving": "Saving...",
+    "deleteUserTitle": "Delete User",
+    "deleteUserMessage": "Are you sure you want to delete user? This action cannot be undone.",
+    "unlimited": "Unlimited"
   }
 }
