--- a/traccar-react-frontend/src/i18n/locales/pt.json
+++ b/traccar-react-frontend/src/i18n/locales/pt.json
@@ -307,5 +307,106 @@
     "editPersonTitle": "Editar Pessoa",
     "delete": "Excluir",
     "confirm": "Confirmar"
+  },
+  "commands": {
+    "title": "Comandos",
+    "filters": "Filtros",
+    "clear": "Limpar",
+    "refresh": "Atualizar",
+    "sendCommand": "Enviar Comando",
+    "bulkSend": "Envio em Lote",
+    "filterCommands": "Filtrar Comandos",
+    "searchCommands": "Pesquisar comandos",
+    "searchPlaceholder": "Pesquisar por tipo de comando, dispositivo ou resultado...",
+    "status": "Status",
+    "allStatus": "Todos os Status",
+    "pending": "Pendente",
+    "sent": "Enviado",
+    "delivered": "Entregue",
+    "failed": "Falhou",
+    "cancelled": "Cancelado",
+    "priority": "Prioridade",
+    "allPriorities": "Todas as Prioridades",
+    "urgent": "Urgente",
+    "high": "Alta",
+    "normal": "Normal",
+    "low": "Baixa",
+    "device": "Dispositivo",
+    "allDevices": "Todos os Dispositivos",
+    "commandType": "Tipo de Comando",
+    "created": "Criado",
+    "result": "Resultado",
+    "actions": "Ações",
+    "totalCommands": "Total de Comandos",
+    "resendCommand": "Reenviar Comando",
+    "viewDetails": "Ver Detalhes",
+    "cancelCommand": "Cancelar Comando",
+    "noCommandsFound": "Nenhum comando encontrado. Clique em \"Enviar Comando\" para começar.",
+    "noCommandsMatchFilters": "Nenhum comando corresponde aos filtros atuais. Tente ajustar seus critérios de pesquisa.",
+    "clearFilters": "Limpar Filtros",
+    "commandSentSuccess": "Comando enviado com sucesso!",
+    "commandsSentSuccess": "comandos enviados com sucesso!",
+    "commandsSentPartial": "comandos enviados, falharam",
+    "commandsRefreshed": "Comandos atualizados"
+  },
+  "users": {
+    "title": "Gerenciamento de Usuários",
+    "addUser": "Adicionar Usuário",
+    "searchUsers": "Pesquisar usuários",
+    "searchPlaceholder": "Pesquisar por nome ou email...",
+    "status": "Status",
+    "all": "Todos",
+    "active": "Ativo",
+    "inactive": "Inativo",
+    "role": "Função",
+    "administrator": "Administrador",
+    "user": "Usuário",
+    "name": "Nome",
+    "email": "Email",
+    "deviceLimit": "Limite de Dispositivos",
+    "created": "Criado",
+    "actions": "Ações",
+    "totalUsers": "Total de Usuários",
+    "activeUsers": "Usuários Ativos",
+    "administrators": "Administradores",
+    "inactiveUsers": "Usuários Inativos",
+    "moreActions": "Mais ações",
+    "editUser": "Editar Usuário",
+    "viewPermissions": "Ver Permissões",
+    "deleteUser": "Excluir Usuário",
+    "accessDenied": "Acesso negado. Privilégios de administrador necessários para gerenciar usuários.",
+    "createNewUser": "Criar Novo Usuário",
+    "editUserTitle": "Editar Usuário",
+    "phone": "Telefone",
+    "password": "Senha",
+    "deviceLimitHelper": "-1 para ilimitado",
+    "userLimit": "Limite de Usuários",
+    "userLimitHelper": "0 para sem direitos de gerenciamento",
+    "administrator": "Administrador",
+    "cancel": "Cancelar",
+    "createUser": "Criar Usuário",
+    "creating": "Criando...",
+    "updateUser": "Atualizar Usuário",
+    "updating": "Atualizando...",
+    "passwordHelper": "Deixe em branco para manter a senha atual",
+    "userPermissions": "Permissões do Usuário",
+    "devicePermissions": "Permissões de Dispositivos",
+    "groupPermissions": "Permissões de Grupos",
+    "managedUsers": "Usuários Gerenciados",
+    "selectDevices": "Selecionar Dispositivos",
+    "selectGroups": "Selecionar Grupos",
+    "selectManagedUsers": "Selecionar Usuários Gerenciados",
+    "currentPermissionsSummary": "Resumo das Permissões Atuais",
+    "devicesSelected": "dispositivo(s) selecionado(s)",
+    "noDevicesSelected": "Nenhum dispositivo selecionado",
+    "groupsSelected": "grupo(s) selecionado(s)",
+    "noGroupsSelected": "Nenhum grupo selecionado",
+    "usersManaged": "usuário(s) gerenciado(s)",
+    "noUsersManaged": "Nenhum usuário gerenciado",
+    "savePermissions": "Salvar Permissões",
+    "saving": "Salvando...",
+    "deleteUserTitle": "Excluir Usuário",
+    "deleteUserMessage": "Tem certeza de que deseja excluir o usuário? Esta ação não pode ser desfeita.",
+    "unlimited": "Ilimitado"
   }
 }
